--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             const seconds = Math.floor((timeLeft % 1000 * 60) / 1000);
 
             document.getElementById("countdown").textContent =
-                `${days}d ${hours}h ${minutes}m ${seconds}s`;
+                `${seconds}m`;
 
             if (timeLeft < 0) {
                 document.getElementById("countdown").textContent = "🎉 Happy New Year! 🎉";
